--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: redis://redistogo:46a27de12ee02bee5351677d4d1074d9@pike.redistogo.com:11567/
   channel_prefix: sms_senger_production
